# sscma-example-sg200x

./: CONTRIBUTING.md  README.md  flake.nix
components/sophgo/common/: app_ipcam_ll.c
components/sophgo/video/include/: video_shm.h
components/sophgo/video/src/: video_shm.c
docs/: model_convert.md  oobe_40hr_plan.md  oobe_programming_spec.md  oobe_spec.md
plans/: multi-channel-streamer-spec.md
solutions/: qr-reader-service-README.md
solutions/archived-supervisor-cpp/www/: package-lock.json  package.json
solutions/camera-recorder/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
solutions/camera-recorder/opkg/CONTROL/: control  postinst
solutions/camera-streamer/: AUDIO_STREAMING_OPTIONS.md  CMakeLists.Complex.txt.bak  CMakeLists.txt  README.md  RELAY_INTEGRATION.md  SHARED_MEMORY_IPC.md  TESTING_GUIDE.md
solutions/camera-streamer/examples/: Makefile  video_consumer  video_consumer_example.c
solutions/camera-streamer/main/: main.cpp  relay_forwarder.cpp  relay_forwarder.h
solutions/camera-streamer/rootfs/etc/init.d/: S95camera-streamer
solutions/oobe/: CMakeLists.txt  INSTALL.md  Makefile  QUICK_START.md  README.md  SUPERVISOR_API_REFERENCE.md  TROUBLESHOOTING.md
solutions/oobe/main/: CMakeLists.txt  oobe_server.cpp
solutions/oobe/opkg/CONTROL/: control  postinst
solutions/oobe/rootfs/etc/init.d/: S94oobe
solutions/oobe/web/: alerts.html  index.html
solutions/oobe/web/css/: style.css
solutions/oobe/web/js/: oobe-app.js  supervisor-api.js
solutions/sscma-qrcode-reader/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
solutions/sscma-qrcode-reader/main/: CMakeLists.txt  main.cpp
solutions/supervisor/: CAMERA_STREAMING.md  PROGRAMMING_SPEC.md  SUPERVISOR_UI_REDESIGN_SPEC.md  TPR.css  go.mod  go.sum  ui_update_spec.md
solutions/supervisor/cmd/supervisor/: main.go
solutions/supervisor/internal/api/: response.go  response_test.go
solutions/supervisor/internal/auth/: auth.go
solutions/supervisor/internal/config/: config.go
solutions/supervisor/internal/device/: device.go
solutions/supervisor/internal/handler/: camera.go  camera_proxy.go  device.go  device_test.go  external_relay.go  file.go  forwarder_manager.go  led.go  led_test.go  qr.go  recording.go  supervisor_control.go  update_config.go  user.go  wifi.go
solutions/supervisor/internal/middleware/: middleware.go
solutions/supervisor/internal/network/: wifi.go
solutions/supervisor/internal/oobe/: manager.go
solutions/supervisor/internal/server/: server.go
solutions/supervisor/internal/system/: device.go
solutions/supervisor/internal/tls/: tls.go
solutions/supervisor/internal/upgrade/: upgrade.go  upgrade_test.go
solutions/supervisor/www/: index.html  package-lock.json  package.json  tailwind.config.js
solutions/supervisor/www/public/brand/: README.md
solutions/supervisor/www/src/: App.tsx
solutions/supervisor/www/src/api/device/: index.ts
solutions/supervisor/www/src/api/files/: index.ts
solutions/supervisor/www/src/api/led/: index.ts
solutions/supervisor/www/src/api/recording/: index.ts
solutions/supervisor/www/src/api/user/: user.d.ts
solutions/supervisor/www/src/assets/style/: antd-reset.scss  index.css
solutions/supervisor/www/src/components/common-popup/: index.tsx
solutions/supervisor/www/src/components/loading/: index.tsx
solutions/supervisor/www/src/layout/mobile/: index.tsx
solutions/supervisor/www/src/layout/mobile/header/: index.tsx
solutions/supervisor/www/src/layout/mobile/sidebar/: index.tsx
solutions/supervisor/www/src/layout/pc/: index.tsx
solutions/supervisor/www/src/router/: index.tsx
solutions/supervisor/www/src/store/: user.ts
solutions/supervisor/www/src/utils/: index.ts  supervisorRequest.ts
solutions/supervisor/www/src/views/about/: index.tsx
solutions/supervisor/www/src/views/files/: index.tsx
solutions/supervisor/www/src/views/led-config/: index.tsx
solutions/supervisor/www/src/views/login/: index.tsx
solutions/supervisor/www/src/views/network/: hook.ts  index.tsx
solutions/supervisor/www/src/views/overview/: hook.ts  index.tsx
solutions/supervisor/www/src/views/power/: index.tsx
solutions/supervisor/www/src/views/recording/: index.tsx
solutions/supervisor/www/src/views/security/: index.tsx
solutions/supervisor/www/src/views/system/: hook.tsx  index.tsx
solutions/supervisor/www/src/views/terminal/: index.tsx
solutions/supervisor/www/src/views/updates/: index.tsx
